# lolacoollife

./: CMakeLists.txt  FashionMnist_LeNet.pt  LibTorch_inference.cpp  Mnist_LeNet(1).pt
